[package]
name = "rust_graphql_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.11"
juniper_warp = "0.7.0"
warp = "0.3.6"
tokio = { version = "1.32.0", features = ["full"] }
async-graphql = "6.0.7"
async-graphql-warp = "6.0.7"
serde = "1.0.189"
serde_json = "1.0.107"
